<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_user_guide"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/user_guide" />
        <item
            android:id="@+id/nav_maps_leaderboard"
            android:icon="@drawable/ic_baseline_pin_drop_24"
            android:title="@string/menu_maps_leaderboard" />
        <item
            android:id="@+id/nav_multichoice_leaderboard"
            android:icon="@drawable/ic_baseline_leaderboard_24"
            android:title="@string/menu_multichoice_leaderboard" />
        <item
            android:id="@+id/nav_gm_difficulty"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_google_maps" />
        <item
            android:id="@+id/nav_mc_difficulty"
            android:icon="@drawable/ic_baseline_input_24"
            android:title="@string/menu_multichoice" />
    </group>
</menu>